refactor: clean up gradle plugin and move extension to a separate class